--- a/portfolio/src/styles/components/app.sass
+++ b/portfolio/src/styles/components/app.sass
@@ -10,6 +10,6 @@
         width: 100%
         font-size: 5rem
         margin-bottom: 4rem
-        background: variables.$gradient
+        color: #8c184a
         -webkit-background-clip: text
-        -webkit-text-fill-color: transparent
+        
